- small bug on collapsed.

--- a/frontend/snappy/css/bg.css
+++ b/frontend/snappy/css/bg.css
@@ -11,6 +11,7 @@
   .listHeaderButtons {
 	position: fixed;
 	bottom: 0px;
+	left: 0px;
 	background-color: teal;
 	width: 100%;
   }
